added getAllUserProfiles and updateUserProfile
