# Spring/src/main/resources/api.yaml
@@ -41,23 +41,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
     get:
-      summary: Get all users
-      operationId: getUsers
+      tags:
+        - UserProfile
+      operationId: getAllUserProfiles
       responses:
         '200':
-          description: A list of users
+          description: A list of user profiles
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserProfileModel'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    put:
+      tags:
+        - UserProfile
+      operationId: updateUserProfile
+      requestBody:
+        description:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserProfileModel"
+        required: true
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserProfileModel"
+        '400':
+          description: invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
 
   /userProfile/{id}:
     get:
-      summary: Get a user by ID
-      operationId: getUserById
+      operationId: getUserProfileById
       parameters:
         - name: id
           in: path
